# dos_safar

./: .gitignore  Cargo.toml  HackberryPi5_Setup  LICENSE  README.MD  README.md  build.sh
assets/web/: index.html  lcd-config.html  systems.html  troubleshoot.html
assets/web/css/: style.css
assets/web/js/: app.js
config/: anbernic.toml  default.toml  lcd-optimized.toml  raspberry-pi.toml
src/: lib.rs  main.rs
src/bootloader/: boot_config.rs  menu.rs  mod.rs  os_manager.rs
src/hardware/: config_persist.rs  device_detect.rs  display.rs  enhanced_network.rs  input.rs  mod.rs  network.rs
src/remote/: api.rs  mod.rs  screen_share.rs  web_server.rs
src/tools/: image_builder.rs  web_test.rs
src/utils/: config.rs  filesystem.rs  logger.rs  mod.rs
tests/: web_test.rs
