[package]
name = "dos_safar"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Universal ARM Boot Manager for gaming handhelds and Raspberry Pi"
license = "MIT"
repository = "https://github.com/yourusername/dos_safar"

[dependencies]
# Web server and HTTP handling
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration management
toml = "0.8"
config = "0.14"

# System and hardware interface
nix = "0.27"
libc = "0.2"
sysinfo = "0.30"

# ARM/Raspberry Pi specific
rppal = { version = "0.14", optional = true }

# Network and connectivity
reqwest = { version = "0.11", features = ["json"] }
local-ip-address = "0.6"

# File system and I/O
tempfile = "3.0"
walkdir = "2.0"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Gaming and display
image = "0.24"
minifb = "0.25"

# Development tools
clap = { version = "4.0", features = ["derive"] }

[features]
default = ["raspberry-pi"]
raspberry-pi = ["rppal"]
development = []

[[bin]]
name = "dos_safar"
path = "src/main.rs"

[[bin]]
name = "image_builder"
path = "src/tools/image_builder.rs"

[[bin]]
name = "web_server_test"
path = "src/tools/web_test.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"